Restoring surefire memory